--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="modal-dialog modal-dialog-centered modal-xl text-center">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modal-title">Modal title</h5>
+                    <h5 class="modal-title" id="modal-title">Global commands</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body" id="modal-body">
@@ -65,7 +65,7 @@
         <div class="modal-dialog modal-dialog-centered modal-xl text-center">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modal-title">Modal title</h5>
+                    <h5 class="modal-title" id="modal-title">Playsound commands</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body" id="modal-body">
