--- a/commands.html
+++ b/commands.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Murmur bot Twitch chat command list">
     <meta property="og:description" content="Murmur bot Twitch chat command list">
     <meta name="twitter:description" content="Murmur bot Twitch chat command list">
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'>
     <link href="https://cdn.datatables.net/v/bs5/jq-3.7.0/dt-1.13.6/af-2.6.0/b-2.4.1/b-colvis-2.4.1/b-html5-2.4.1/cr-1.7.0/date-1.5.1/fc-4.3.0/fh-3.4.0/kt-2.10.0/r-2.5.0/rg-1.4.0/rr-1.4.1/sc-2.2.0/sb-1.5.0/sp-2.2.0/sl-1.7.0/sr-1.3.0/datatables.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/fa/all.css">
@@ -65,7 +66,7 @@
         <div class="modal-dialog modal-dialog-centered modal-xl text-center">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modal-title">Playsound commands</h5>
+                    <h5 class="modal-title" id="modal-title">Playsounds commands</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body" id="modal-body">
