--- a/commands.html
+++ b/commands.html
@@ -46,9 +46,9 @@
     </body>
 
 
-    <div class="modal fade" id="cmdsModal" data-bs-backdrop="static" tabindex="-1"
+    <div class="modal fade" id="cmdsModal" tabindex="-1"
         aria-labelledby="cmdsModal" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-xl text-center">
+        <div class="modal-dialog modal-dialog-centered modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="modal-title">Global commands</h5>
@@ -61,9 +61,9 @@
             </div>
         </div>
     </div>
-    <div class="modal fade" id="playsoundsModal" data-bs-backdrop="static" tabindex="-1"
+    <div class="modal fade" id="playsoundsModal" tabindex="-1"
         aria-labelledby="playsoundsModal" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-xl text-center">
+        <div class="modal-dialog modal-dialog-centered modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="modal-title">Playsounds commands</h5>
