add copy to clipboard info bellow table

--- a/commands.html
+++ b/commands.html
@@ -57,6 +57,7 @@
                 <div class="modal-body" id="modal-body">
                     <table class="table table-striped" style="width:100%" id="table_cmds">
                     </table>
+                    <h6 class="text-center"><i class="fal fa-info-circle me-2"></i>Click on the command to copy to clipboard</h6>
                 </div>
             </div>
         </div>
@@ -72,6 +73,7 @@
                 <div class="modal-body" id="modal-body">
                     <table class="table table-striped" style="width:100%" id="table_playsounds">
                     </table>
+                    <h6 class="text-center"><i class="fal fa-info-circle me-2"></i>Click on the green button on the right to copy to clipboard</h6>
                 </div>
             </div>
         </div>
