--- a/snow.html
+++ b/snow.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Murmur Twitch Mariah</title>
+    <title>Murmur Twitch Snow</title>
     <meta name="description" content="Murmur bot Twitch Snow Effect">
     <meta property="og:description" content="Murmur bot Twitch Snow Effect">
     <meta name="twitter:description" content="Murmur bot Twitch Snow Effect">
